<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TiX</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">TestInstallation</string>
    <string name="edit_message_hint">Enter a message</string>

    <string name="button_send">Send</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="default_ip">10.0.3.2</string>
    <string name="edit_address">Enter server ip adrress</string>
    <string name="default_port">10000</string>
    <string name="edit_port">Enter server port</string>

    <!--
      <string name="start_service">Start Service</string>
      <string name="stop_service">Stop Service</string>
    -->

    <string name="title_activity_login">Login</string>
    <string name="title_activity_installations">Installations</string>
    <string name="title_current_installations">Current installation</string>

    <string name="username_placeholder">Email</string>
    <string name="password_placeholder">Password</string>
    <string name="repeat_password_placeholder">Repeat Password</string>
    <string name="button_login">Login</string>
    <string name="button_create_account">Create Account</string>

    <string name="button_create_installation">Create Installation</string>
    <string name="new_installation_label">Select a name for the new installation:</string>

    <string name="new_installation_hint">Installation</string>

    <string name="button_stop_service">Stop service</string>
    <string name="button_start_service">Start service</string>

    <string name="button_delete_installation">Delete installation</string>

    <string name="current_installations_label">Current Installations:</string>
    <string name="current_installation_label">Current Installation:</string>

</resources>
