<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".UdpActivity">

    <EditText android:id="@+id/edit_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_ip"
        android:hint="@string/edit_address" />

    <EditText android:id="@+id/edit_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_port"
        android:hint="@string/edit_port" />

    <EditText android:id="@+id/edit_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:onClick="sendMessage"/>

    <Button android:id="@+id/btnStartService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_service"
        android:onClick="startService"/>

    <Button android:id="@+id/btnStopService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_service"
        android:onClick="stopService" />

    <TextView android:id="@+id/fileTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <!--<TextClock android:id="@+id/clock"
        android:format24Hour="yyyy-MM-dd hh:mm:ss"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"/>-->

</LinearLayout>
